--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:name="com.mysampleapp.Application"
-        >
+        android:name="com.mysampleapp.Application">
         <activity
             android:name=".SplashActivity"
             android:label="@string/app_name"
@@ -40,7 +39,9 @@
         <activity
             android:name=".MainActivity"
             android:launchMode="singleInstance"
-            android:label="@string/title_activity_main">
+            android:label="@string/title_activity_main"
+            android:windowSoftInputMode="adjustNothing">
+
         </activity>
 
         <!-- BEGIN - APP CONTENT DELIVERY AND USER DATA STORAGE -->
